--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
     "liveServer.settings.port": 5502,
-    "python.pythonPath": "/usr/bin/python3.8"
+    "python.pythonPath": "/usr/bin/python3.8",
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": false
 }
